--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
 
             <div id="formulario">
                  <h1>Login</h1>
-                 <p>seja Bem vindo(a) novamente, faca login para acessar sua conta e poder fazer as configuracoes no seu ambiente de trabalho</p>
-                 
+                 <p>seja Bem vindo(a) novamente, faca login para acessar sua conta e poder fazer as configuracoes no seu ambiente</p>
+
                  <form action="login.php" method="post">
                  </form>
             </div>
