--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
 
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles/style.css">
+
+    <link rel="stylesheet"  href="styles/media-query.css">
 
 </head>
 
@@ -18,7 +20,7 @@
         <section id="login">
 
             <div id="imagem">
-                 foto
+                 
             </div>
 
             <div id="formulario">
