--- a/index.html
+++ b/index.html
@@ -47,8 +47,9 @@
 
                    </div>
 
-                   <input type="submit" value="Entrar">
-                   <a href="Esqueci.html">Esqueci a Senha
+                   <input type="submit" value="Entrar" class="botao">
+                     <a href="Esqueci.html" class="link"> 
+                       Esqueci a Senha
                        <i class="material-icons">mail</i> <!-- i para icones -->
 
                    </a>
